// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots renders correctly when disabled 1`] = `
<li
  aria-current={false}
  className="monday-style-menu-item-button"
  id="undefined-undefined"
  role="menuitem"
>
  <button
    aria-busy={false}
    aria-disabled={true}
    className="button monday-style-button sizeSmall monday-style-button--size-small kindPrimary monday-style-button--kind-primary colorPrimary monday-style-button--color-primary clickAnimation disabled monday-style-button--disabled"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <div
      className="menu-item-button-content"
    >
      my item
    </div>
  </button>
</li>
`;

exports[`Snapshots renders correctly when selected 1`] = `
<li
  aria-current={false}
  className="monday-style-menu-item-button"
  id="undefined-undefined"
  role="menuitem"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="button monday-style-button sizeSmall monday-style-button--size-small kindPrimary monday-style-button--kind-primary colorPrimary monday-style-button--color-primary clickAnimation"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <div
      className="menu-item-button-content"
    >
      my item
    </div>
  </button>
</li>
`;

exports[`Snapshots renders correctly with custom class name 1`] = `
<li
  aria-current={false}
  className="monday-style-menu-item-button dummy-class-name"
  id="undefined-undefined"
  role="menuitem"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="button monday-style-button sizeSmall monday-style-button--size-small kindPrimary monday-style-button--kind-primary colorPrimary monday-style-button--color-primary clickAnimation"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <div
      className="menu-item-button-content"
    />
  </button>
</li>
`;

exports[`Snapshots renders correctly with empty props 1`] = `
<li
  aria-current={false}
  className="monday-style-menu-item-button"
  id="undefined-undefined"
  role="menuitem"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="button monday-style-button sizeSmall monday-style-button--size-small kindPrimary monday-style-button--kind-primary colorPrimary monday-style-button--color-primary clickAnimation"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <div
      className="menu-item-button-content"
    />
  </button>
</li>
`;

exports[`Snapshots renders correctly with title and icon 1`] = `
<li
  aria-current={false}
  className="monday-style-menu-item-button"
  id="undefined-undefined"
  role="menuitem"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="button monday-style-button sizeSmall monday-style-button--size-small kindPrimary monday-style-button--kind-primary colorPrimary monday-style-button--color-primary clickAnimation"
    data-testid="button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <div
      className="menu-item-button-content"
    >
      my item
    </div>
  </button>
</li>
`;
